--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "aws-serverless-express": "^1.3.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "claudia": "^3"
